--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,26 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+cmake_minimum_required(VERSION 2.8)
+project(rosbag_from_images)
 
-project(BagFromImages)
+find_package(catkin REQUIRED COMPONENTS cv_bridge image_transport roscpp rosbag)
+find_package(OpenCV REQUIRED)
 
-rosbuild_init()
+catkin_package()
 
-FIND_PACKAGE(OpenCV REQUIRED)
+include_directories(
+  ${catkin_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
+)
 
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+add_executable(${PROJECT_NAME}
+  main.cc
+  Thirdparty/DLib/FileFunctions.cpp
+)
 
-rosbuild_add_executable(${PROJECT_NAME}
-main.cc
-Thirdparty/DLib/FileFunctions.cpp)
+add_dependencies(${PROJECT_NAME}
+  ${catkin_EXPORTED_TARGETS}
+)
 
 target_link_libraries (${PROJECT_NAME}
-${OpenCV_LIBS})
+  ${OpenCV_LIBS}
+  ${catkin_LIBRARIES}
+)
